--- a/src/main/ressources/Graphic Interface.fxml
+++ b/src/main/ressources/Graphic Interface.fxml
@@ -12,34 +12,53 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.insightr.gildedrose.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1248.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.insightr.gildedrose.Controller">
         <children>
             <Pane layoutX="53.0" layoutY="27.0" prefHeight="44.0" prefWidth="242.0">
          <children>
             <Button layoutX="14.0" layoutY="29.0" mnemonicParsing="false" onAction="#loadItems" prefHeight="31.0" prefWidth="57.0" text="Load" />
          </children></Pane>
-      <Button layoutX="642.0" layoutY="506.0" mnemonicParsing="false" onAction="#addItem" text="Add" />
+      <Button layoutX="343.0" layoutY="603.0" mnemonicParsing="false" onAction="#addItem" text="Add" />
       <Button layoutX="243.0" layoutY="56.0" mnemonicParsing="false" onAction="#updateItems" text="Update" />
-      <TableView fx:id="table_items" layoutX="60.0" layoutY="106.0" prefHeight="410.0" prefWidth="458.0">
+      <TableView fx:id="table_items" layoutX="48.0" layoutY="106.0" prefHeight="400.0" prefWidth="1181.0">
         <columns>
-
-                <TableColumn fx:id="nameColumn" prefWidth="224.00001525878906" text="Name">
+            <TableColumn fx:id="idcolumn" minWidth="4.0" prefWidth="205.0" text="Id">
+                <cellValueFactory>
+                    <PropertyValueFactory property="Id" />
+                </cellValueFactory>
+            </TableColumn>
+                <TableColumn fx:id="nameColumn" prefWidth="193.99998474121094" text="Name">
                     <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
                 </TableColumn>
-                <TableColumn fx:id="sellInColumn" minWidth="4.0" prefWidth="108.0" text="SellIn">
+                <TableColumn fx:id="sellInColumn" minWidth="4.0" prefWidth="139.0" text="SellIn">
                     <cellValueFactory><PropertyValueFactory property="sellIn" /> </cellValueFactory>
                 </TableColumn>
-                <TableColumn fx:id="qualityColumn" minWidth="4.0" prefWidth="125.0" text="Quality">
+                <TableColumn fx:id="qualityColumn" minWidth="4.0" prefWidth="168.0" text="Quality">
                     <cellValueFactory><PropertyValueFactory property="quality" /> </cellValueFactory>
                 </TableColumn>
+            <TableColumn fx:id="creationcolumn" minWidth="4.0" prefWidth="142.0" text="Creation Date">
+               <cellValueFactory>
+                  <PropertyValueFactory property="creation_date" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="sellcolumn" minWidth="4.0" prefWidth="143.0" text="Selling Date">
+               <cellValueFactory>
+                  <PropertyValueFactory property="sell_date" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="buycolumn" minWidth="4.0" prefWidth="205.0" text="Bying Date">
+               <cellValueFactory>
+                  <PropertyValueFactory property="buy_date" />
+               </cellValueFactory>
+            </TableColumn>
             </columns>
 
       </TableView>
-      <TextField fx:id="Name" layoutX="573.0" layoutY="317.0" promptText="Name" />
-      <TextField fx:id="Quality" layoutX="573.0" layoutY="389.0" promptText="Quality" />
-      <TextField fx:id="SellIn" layoutX="573.0" layoutY="454.0" promptText="SellIn" />
-      <PieChart fx:id="pieChart" layoutX="544.0" layoutY="56.0" prefHeight="203.0" prefWidth="242.0" />
-      <BarChart fx:id="barChart" layoutX="807.0" layoutY="38.0" prefHeight="239.0" prefWidth="267.0">
+      <TextField fx:id="Name" layoutX="81.0" layoutY="546.0" promptText="Name" />
+      <TextField fx:id="Quality" layoutX="81.0" layoutY="618.0" promptText="Quality" />
+      <TextField fx:id="SellIn" layoutX="81.0" layoutY="683.0" promptText="SellIn" />
+      <PieChart fx:id="pieChart" layoutX="433.0" layoutY="539.0" prefHeight="203.0" prefWidth="242.0" />
+      <BarChart fx:id="barChart" layoutX="767.0" layoutY="546.0" prefHeight="239.0" prefWidth="267.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
